css/DuxChat.css
:root{
    --transparent-white: #fffffff8;
    --my-message-color: #810202;
}

.chat-container{
    position: relative;
    width: 100%;
    height: 100%;
    background-color: white;
}

.chat-view {
    position: absolute;
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-rows: 1fr auto;
    background-color: white;
    z-index: 2;
    align-items: end;
    padding: 0px 100px;
    /* padding-bottom: 0px; */
}

.message-footer{
    /* width: 600px; */
    padding: 15px;
    align-self: end;
    /* border: 1px solid #e2e2e2; */
    /* background-color: var(--transparent-white); */

}

.typing-area{
    display: grid;
    grid-template-columns: /* auto */ 1fr auto;
    grid-gap: 10px;
    /* align-items: center; */
}

.send-message, .add-attachment {
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background-color: #000000;
    display: grid;
    place-items: center;   
    align-self: center;
}.send-message > img, .add-attachment > img { width: 15px; filter: invert(100%);}

.message-typing-input{
    border: 2px solid #bdb7a9;
    border-radius: 10px;
    padding: 13px;
    width: 100%;
    font-size: 16px;
    outline: none;
    color: black;
    font-weight: 400;
    background: white;
}

.messages-container{
    display: grid;
    padding: 0px 30px;
    grid-gap: 10px;
    overflow: scroll;
    height: 100%;
    align-items: end;

    /* TODO: Remove Scrollbars */
}

.messages-container > li {
    position: relative;
    padding: .8em 1em;
    color: white;
    border-radius: 13px;
    border: 1px solid rgb(227, 227, 227);
    max-width: 70%;
    list-style: none;
    user-select: none;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
    display: grid;
}

.messages-container > li:first-child{
    margin-top: calc(15px + 1em + 15px + 25px);
}.messages-container > li:last-child{
    margin-bottom: 15px;
}

.messages-container > .mine {
    place-self: end;
    background-color: var(--my-message-color);
    border-bottom-right-radius: 0px;
    margin-right: 45px;
}

.messages-container > .foreign {
    place-self: start;
    background-color: rgb(254, 250, 250);
    color: rgb(181, 66, 66);
    border-bottom-left-radius: 0px;    
    margin-left: 45px;
}

.name-tag {
    height: 40px;
    width: 40px;
    background: black;
    color: white;
    border-radius: 50%;
    display: grid;
    place-items: center;
    position: absolute;
}

.mine > .name-tag { right: -48px; background: var(--my-message-color); }
.foreign > .name-tag { left: -48px; background: #bdb7a9;}

.mine + .mine > .name-tag,
.foreign-a + .foreign-a > .name-tag,
.foreign-b + .foreign-b > .name-tag  {
    display: none;
}



@media screen and (max-width: 500px) {
    .main-container{
        width: 100%;
        height: 100%;
        border-radius: 0px;
    }

    .message-header{
        padding: 10px 12px;
        grid-template-columns: 30px 40px 1fr auto;
        align-items: center;
        grid-gap: 10px;
        backdrop-filter: blur(50px);
        z-index: 10;
    }

    .messages-container{
        grid-gap: 15px;
    }

    .members {
        display: none;
    }

    .name-tag {
        height: 30px;
        width: 30px;
    }

    .messages-container > .mine {
        margin-right: 35px;
    }
    
    .messages-container > .foreign {
        margin-left: 35px;
    }

    .mine > .name-tag { right: -38px; background: #4a8056; }
    .foreign > .name-tag { left: -38px; background: #bdb7a9;}

}

@media screen and (max-height: 720px) {
    .main-container{
        height: 100%;
        border-radius: 0px;
    }
}


.play-button{
    position: absolute;
    align-self: center;
    left: calc(100% + 13px);
    border-radius: 50%;
    background-color: var(--my-message-color);
    height: 30px;
    width: 30px;
    display: grid;
    place-items: center;
    cursor: pointer;
    transition: 0.3s all;
}

.play-button:hover{
    transform: scale(1.13);
}


.play-button img{
    filter: invert(100%);
    height: 13px;
    width: 13px;
}

.dux-message-loader {
    --sk-size: 30px;
}

.dux-overlay{
    padding: 0px 100px 100px 100px;
    z-index: 10000;
}

.dux-overlay .close-button{
    position: absolute;
    top: 50px;
    right: 50px;
}

.dux-icon {
    overflow: hidden;
    transition: 0.4s all;
    z-index: 10001;
}

.dux-icon img{
    height: 100%;
    width: auto;
}

.dux-icon:hover {
    transform: scale(1.23);
}

.circle {
    position: absolute;
    height: 70px;
    width: 70px;
    background-color: white;
    right: 30px;
    transform: translateX(50% - 50px);
    bottom: 30px;
    border-radius: 50%;
    transition: 0.4s all;
}

